[package]
name = "sequoia-hongg"
version = "0.1.0"
authors = ["Alexander Kjäll <alexander.kjaell@schibsted.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
honggfuzz = "0.5"
sequoia-openpgp = { git = "https://gitlab.com/sequoia-pgp/sequoia.git" }